--- a/assets/html/ders5.html
+++ b/assets/html/ders5.html
@@ -66,7 +66,7 @@
             <select name="aaa" id="zaa">
                 <option></option>
                 <option>lez</option>
-                <option>gy</option>
+                <option>GAY</option>
             </select>
         </form>
         <hr>
